--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>Objetivos</title>
 </head>
 <body>
+    <h1>Objetivos</h1>
+    <ul>
+        <li>Aprender a programar</li>
+    </ul>
     
 </body>
 </html>
