Otros bojetivos introducidos

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <h1>Objetivos</h1>
     <ul>
         <li>Aprender a programar</li>
+        <li>Aprender html</li>
+        <li>Aprender CSS</li>
+        <li>Aprender Javascript</li>
     </ul>
     
 </body>
