Desarrollo de conocimientos previos

--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
     <p>Finalizado</p>
 
     <h2>Conocimientos previos</h2>
-    
+    <ul>
+        <li>Conocimientos de html</li>
+        <li>Conocimientos de CSS</li>
+        <li>Un poquito de Javascript</li>
+    </ul>
 </body>
 </html>
