Finalizado Objetivos y agregada hoja de estilos

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Objetivos</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Objetivos</h1>
@@ -22,5 +23,7 @@
         <li>Conocimientos de CSS</li>
         <li>Un poquito de Javascript</li>
     </ul>
+
+    <p>Finalizado</p>
 </body>
 </html>
